--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
+    "http": "0.0.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.15",
@@ -24,7 +25,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper": "^1.0.1",
-    "rxjs-compat": "^6.4.0"
+    "rxjs-compat": "^6.4.0",
+    "socket.io": "^2.2.0",
+    "ws": "^6.2.1"
   },
   "devDependencies": {},
   "scripts": {
